# rpcs3-android

./: .gitignore  .gitmodules  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/net/rpcs3/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  compile_commands.json  native-lib.cpp
app/src/main/java/net/rpcs3/: FirmwareRepository.kt  GameRepository.kt  GraphicsFrame.kt  MainActivity.kt  Permission.kt  ProgressRepository.kt  RPCS3.kt  RPCS3Activity.kt  UsbDeviceRepository.kt
app/src/main/java/net/rpcs3/ui/games/: GamesScreen.kt
app/src/main/java/net/rpcs3/ui/navigation/: AppNavHost.kt
app/src/main/java/net/rpcs3/ui/settings/: SettingsScreen.kt
app/src/main/res/drawable/: ic_rpcs3_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_rpcs3.xml
app/src/main/res/mipmap-anydpi-v26/: ic_rpcs3.xml
app/src/main/res/values/: ic_rpcs3_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/net/rpcs3/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
